# ustc-land

./: .gitignore  CMakeLists.txt  README.md
include/: i18n.h  main_application.h  main_canvas.h
include/game/: common.h  main_application.h  random.h
include/game/logic/: basic.h  cards.h  main.h  mainlogic.h  readjson.h  register.h  registry.h
include/game/widgets/: bar.h  button.h  label.h  tabwidget.h
include/nanogui/: opengl.h  vector.h
include/spdlog/: tweakme.h
libs/Debug/: glfw3.lib
libs/Release/: glfw3.lib  jsoncpp.lib
src/cpp/: __temp.cpp  advancement.cpp  bar.cpp  basic.cpp  button.cpp  cards.cpp  common.cpp  gamelogic.cpp  i18n.cpp  label.cpp  main.cpp  main_application.cpp  main_application_logic.cpp  main_canvas.cpp  random.cpp  readjson.cpp  register.cpp  registry.cpp  tabwidget.cpp
src/resources/: gamesettings.json
src/resources/lang/: zh_cn.lang
src/resources/rule/: NOTE.txt  advancement.json  attribute.json  cardset.json  cardtype.json  class.json  formula.json  item.json  reward.json  role.json  rulefile.json  spot.json  test.json
src/resources/shaders/: background.frag  background.vert  card.frag  card.vert  floor.frag  floor.vert  main_canvas.vert  shadow.frag  shadow.vert
src/resources/textures/: info.json
